[project]
name = "mvp-nba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ggplot>=0.11.5",
    "ipykernel>=6.29.5",
    "lxml>=5.4.0",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "requests[socks]>=2.32.3",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]
